# rover-low-level-controller

./: .gitignore  Cargo.toml  Makefile  README.md  Ravedude.toml  avr-atmega2560.json  motors.md  pyproject.toml  read_serial.py  rust-toolchain.toml  test_native.sh
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: acs712.md  consideration_implementation.md  debug_usart_overflow.md  decision-log.md  encoder.md  hc_sr04.md  lm335.md  maquina_estados_rover.md  motors.md  peripheral_timers.md  rpi5_uart_communication.md  state_machine_rover.md  testing.md  tf_luna.md  the_pins_connections.md  vl53l0x.md
examples/: control_6_motors_l298n.rs  control_motor_rpi.rs  control_motor_usb_l298n.rs  debug_hcsr04_raw.rs  debug_motors_l298n.rs  test_acs712_current.rs  test_bts7960.rs  test_controller.rs  test_encoders.rs  test_hcsr04_filtered.rs  test_l298n.rs  test_lm335_temperature.rs  test_msm_protocol.rs  test_proximity.rs  test_rpi_communication.rs  test_serial_echo.rs  test_servo.rs  validate_protocol.rs
scripts/: capture_rover_data.py  tune_ekf.m
src/: config.rs  ekf.rs  lib.rs  main.rs  ramp.rs  relay.rs
src/command_interface/: mod.rs  rx_buffer.rs
src/controller/: mod.rs
src/drivers/: mod.rs
src/motor_control/: bts7960.rs  erased.rs  h_bridge.rs  l298n.rs  mod.rs  servo.rs
src/sensors/: acs712.rs  encoder.rs  hc_sr04.rs  ina226.rs  lm335.rs  mod.rs  mpu6050.rs  ntc_thermistor.rs  soft_i2c.rs  tf02.rs  tf_luna.rs  vl53l0x.rs
src/state_machine/: mod.rs
tests/: ekf_test.rs  motor_logic_test.rs  ramp_test.rs  sensors_test.rs  state_machine_test.rs  test_msm_protocol.py
tests/hardware/: calibrate_odometry.py  diag_tf02_usart2.py  i2c_scan.py  test_motors_debug.py  test_motors_main.py  test_msm_protocol.py  test_sensors_individual.py  test_tf02.py  test_tf02_sensor.py
