# Version: v1.1
[package]
name = "rover-low-level-controller"
version = "0.1.0"
authors = ["alonso11"]
edition = "2021"
license = "MIT OR Apache-2.0"

# El binario solo tiene sentido en AVR; sin el feature "avr" se omite
# al compilar para x86 (p.ej. cargo test --no-default-features).
[[bin]]
name = "rover-low-level-controller"
test = false
bench = false
required-features = ["avr"]

# ─── Features ────────────────────────────────────────────────────────────────
[features]
# "avr" activa todos los drivers y HAL; viene ON por defecto para builds normales.
# Para tests nativos x86: cargo usa --no-default-features, que lo desactiva.
default = ["avr"]
avr = ["panic-halt", "avr-device", "arduino-hal"]

# ── Configuración de drivers de motor ────────────────────────────────────────
# Selecciona qué drivers y sensores ACS712 se usan por motor.
# Solo uno debe estar activo; si ninguno está activo se asume all-l298n.
#
#   (default)      Todos los motores con L298N  + ACS712-05A
#   mixed-drivers  FR/FL=L298N(05A) | CR/CL/RR/RL=BTS7960(30A)
#   all-bts7960    Todos los motores con BTS7960 + ACS712-30A
#
# Uso: RUSTFLAGS="-C target-cpu=atmega2560" cargo +nightly build \
#        -Zbuild-std=core -Zjson-target-spec --features avr,mixed-drivers
mixed-drivers = []
all-bts7960   = []

# ─── Dependencias ─────────────────────────────────────────────────────────────
[dependencies]
# Siempre disponibles (usados también en state_machine, que es puro Rust)
ufmt = "0.2.0"
nb  = "0.1.3"

# Solo para AVR — se activan automáticamente con el feature "avr"
panic-halt  = { version = "0.2.0",                                          optional = true }
avr-device  = { version = "0.8.1",                                          optional = true }
arduino-hal = { git = "https://github.com/rahix/avr-hal",
                features = ["arduino-mega2560"],                             optional = true }

# ─── Perfiles ─────────────────────────────────────────────────────────────────
[profile.dev]
# panic = "abort" es obligatorio para AVR (no soporta unwinding).
# Para tests nativos x86 se sobreescribe en test_native.sh con
# RUSTFLAGS="-C panic=unwind".
panic    = "abort"
lto      = true
opt-level = "s"

[profile.release]
panic    = "abort"
lto      = true
opt-level = "s"
