# Version: v1.1
[package]
name = "rover-low-level-controller"

version = "0.1.0"
authors = ["alonso11"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rover-low-level-controller"

test = false
bench = false
required-features = ["avr"]

[features]
default = ["avr"]
avr = ["panic-halt", "avr-device", "arduino-hal"]
mixed-drivers = []
all-bts7960   = []
all-20a       = []   # 6× ACS712-20A — trade-off único tipo de sensor
no-oc         = []   # desactiva protección de sobrecorriente (solo pruebas HW sin ACS712)
no-stall      = []   # desactiva detección de stall por encoder (solo pruebas HW sin encoders)
no-lm335      = []   # desactiva lectura LM335 (solo pruebas HW sin sensor de temperatura)
no-hcsr04     = []   # desactiva fault por proximidad HC-SR04 (solo pruebas HW sin sensor)

[dependencies]
ufmt = "0.2.0"
nb  = "0.1.3"
libm = { version = "0.2.7", default-features = false }
panic-halt  = { version = "0.2.0",                                          optional = true }
avr-device  = { version = "0.8.1",                                          optional = true }
arduino-hal = { git = "https://github.com/rahix/avr-hal",
                features = ["arduino-mega2560"],                             optional = true }

[profile.dev]
panic    = "abort"
lto      = true
opt-level = "s"

[profile.release]
panic    = "abort"
lto      = true
opt-level = "s"
